# yotsubee

./: Area2D.tscn  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  KinematicBody2D.gd  KinematicBody2D.tscn  LICENSE  NOTICE  README.md  message  project.godot  zlib license
.import/: Yotsuba & The Soundtrack - 08 - Asagohan o taberu-GA0dq68tML4.ogg-d85826a8d7e25a8bfda7ccca14f6f3e8.md5  Yotsuba & The Soundtrack - 08 - Asagohan o taberu-GA0dq68tML4.ogg-d85826a8d7e25a8bfda7ccca14f6f3e8.oggstr  Yotsuba_SpriteSheet.png-5b6e19f7c95bacc30dcf14cbe96f5adc.md5  Yotsuba_SpriteSheet.png-5b6e19f7c95bacc30dcf14cbe96f5adc.stex  guy.png-135000b4dd2d3dc96c196a7a65a542b6.md5  guy.png-135000b4dd2d3dc96c196a7a65a542b6.stex  house.png-873b23dab4701b230309b6eed0085474.md5  house.png-873b23dab4701b230309b6eed0085474.stex  icon.png-b6a7fb2db36edd3d95dc42f1dc8c1c5d.md5  icon.png-b6a7fb2db36edd3d95dc42f1dc8c1c5d.stex  image3.png-ed42308e027aeb58a9ffd6f8b343e4a4.md5  image3.png-ed42308e027aeb58a9ffd6f8b343e4a4.stex  main.png-aabefee79c7f3cbaaa4bf9c666127ed5.md5  main.png-aabefee79c7f3cbaaa4bf9c666127ed5.stex  tilemap.png-5e61b4f08267e3455a4ee95d454c23fa.md5  tilemap.png-5e61b4f08267e3455a4ee95d454c23fa.stex
assets/: Area2D.gd  Control.gd  Control.tscn  Control2.gd  Global.gd  Image2.gal  Node2D.tscn  SceneData.gd  Yotsuba & The Soundtrack - 08 - Asagohan o taberu-GA0dq68tML4.ogg.import  Yotsuba_SpriteSheet.png.import  basicCamera.gd  down.tres  globalScene.tscn  guy.png.import  house.png.import  image2.jpg.import  image3.png.import  main.png.import  outside.tscn  room3.tscn  stairs.gd  tileMap1.tres  tilemap.png.import  transparent44.png.import
src/: CMakeLists.txt  config.h.in  game.cpp  index.js  main.cpp
src/assets/: untitled2.json
